--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -62,6 +62,7 @@ svg:hover {
   border-color: #0056b3;
 }
 
+/* Responsive Design */
 @media (max-width: 480px) {
   .header {
     padding: 10px 20px;
